Vista de creación de obra, falta estilo de errores.

--- a/src/main/webapp/styles/css/style.css
+++ b/src/main/webapp/styles/css/style.css
@@ -3429,6 +3429,16 @@ opacity:1 !important;
 	transition: 0.5s;
 }
 
+#message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+#inner-message {
+    margin: 0 auto;
+}
+
 }
 
 
