--- a/src/main/webapp/styles/css/style.css
+++ b/src/main/webapp/styles/css/style.css
@@ -785,7 +785,7 @@ footer .container {
 	max-width: 910px;
 	max-width: 910px;
 	margin: 0 auto;
-	border-top: 1px solid #ef8c74;
+	border-top: 1px solid #47823B;
 }
 
 .footer-copy p {
