--- a/src/main/webapp/styles/css/bootstrap.css
+++ b/src/main/webapp/styles/css/bootstrap.css
@@ -4432,10 +4432,11 @@ a.thumbnail.active {
   color: #333;
 }
 .alert {
-  padding: 15px;
+  padding: 5px;
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
+  text-align: center;
 }
 .alert h4 {
   margin-top: 0;
@@ -5826,5 +5827,7 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+  
 }
+
 /*# sourceMappingURL=bootstrap.css.map */
