--- a/src/main/webapp/styles/css/theme-shop.css
+++ b/src/main/webapp/styles/css/theme-shop.css
@@ -869,3 +869,13 @@ border:1px solid rgba(255,255,255,0.3);
 .checkout-wrap .col-md-3 {
 	margin-top:16px
 }
+
+.floatRight{
+    float: right;
+    margin: 0 0 10px 10px;
+}
+
+.floatLeft{
+    float: left;
+    margin: 0 0 10px 10px;
+}
